create user regsiter and login
