# server/src/controllers/auth.js
@@ -2,15 +2,31 @@ import validator from "validator";
 import generatePassword from "../utils/generatePassword";
 import signJwt from "../utils/signJwt";
 import validPassword from "../utils/validPassword";
-import User from "../models/User";
 import ProblemError from "../utils/ProblemError";
 import sendConfirmationEmail from "../utils/sendConfirmationEmail";
+import User from "../models/User";
+import Admin from "../models/Admin";
 import Cart from "../models/Cart";
 import Subscribe from "../models/Subscribe";
 
+const ONE_DAY = 1000 * 60 * 60 * 24;
+const THREE_MONTHS = 1000 * 60 * 60 * 24 * 90;
+
 export const getProtected = async (req, res, next) => {
   try {
-    const user = await User.findOne({ _id: req.userId });
+    let user = await User.findOne({ _id: req.userId });
+
+    if (!user) {
+      user = await Admin.findOne({ _id: req.userId });
+      if (!user) {
+        throw new ProblemError(
+          400,
+          "user-not-found",
+          "User not found",
+          "User not found"
+        );
+      }
+    }
 
     const publicProfile = await user.getPublicProfile();
 
@@ -23,7 +39,7 @@ export const getProtected = async (req, res, next) => {
   }
 };
 
-export const postLogin = async (req, res, next) => {
+export const loginUser = async (req, res, next) => {
   try {
     const { email, password } = req.body;
 
@@ -87,7 +103,7 @@ export const postLogin = async (req, res, next) => {
       .cookie("access_token", tokenObject.token, {
         httpOnly: true,
         secure: process.env.NODE_ENV === "production",
-        expires: new Date(Date.now() + 1000 * 60 * 60 * 24),
+        expires: new Date(Date.now() + ONE_DAY),
       })
       .status(200)
       .json(publicProfile);
@@ -96,46 +112,123 @@ export const postLogin = async (req, res, next) => {
   }
 };
 
-export const postRegister = async (req, res, next) => {
+export const loginAdmin = async (req, res, next) => {
+  try {
+    const { email, password } = req.body;
+
+    const admin = await Admin.findOne({ email });
+
+    if (!admin) {
+      throw new ProblemError(
+        400,
+        "wrong-credentials",
+        "Wrong credentials",
+        "Invalid email or password"
+      );
+    }
+    if (admin.isActive === "pending") {
+      throw new ProblemError(
+        400,
+        "user-not-active",
+        "User not active",
+        "User is not activated. Please verify your email to activate it"
+      );
+    }
+
+    if (admin.isActive === "blocked") {
+      throw new ProblemError(
+        400,
+        "user-blocked",
+        "User blocked",
+        "User has been blocked for violating our T&C"
+      );
+    }
+    const isValid = validPassword(password, admin.hash, admin.salt);
+
+    if (!isValid) {
+      throw new ProblemError(
+        400,
+        "wrong-credentials",
+        "Wrong credentials",
+        "Invalid email or password"
+      );
+    }
+
+    const tokenObject = signJwt(admin);
+
+    const publicProfile = await admin.getPublicProfile();
+
+    res
+      .cookie("access_token", tokenObject.token, {
+        httpOnly: true,
+        secure: process.env.NODE_ENV === "production",
+        expires: new Date(Date.now() + ONE_DAY),
+      })
+      .cookie("user_id", admin._id, {
+        httpOnly: true,
+        secure: process.env.NODE_ENV === "production",
+        expires: new Date(Date.now() + ONE_DAY),
+      })
+      .cookie("user_role", admin.role, {
+        httpOnly: true,
+        secure: process.env.NODE_ENV === "production",
+        expires: new Date(Date.now() + ONE_DAY),
+      })
+      .status(200)
+      .json(publicProfile);
+  } catch (error) {
+    next(error);
+  }
+};
+
+const validateRegisterBody = (body) => {
+  const { email } = body;
+  email.trim();
+  email.toLowerCase();
+
+  if (
+    validator.isEmpty(email) ||
+    validator.isEmpty(body.password) ||
+    validator.isEmpty(body.firstName) ||
+    validator.isEmpty(body.lastName)
+  ) {
+    throw new ProblemError(
+      400,
+      "empty-fields",
+      "Empty fields",
+      "Please fill all the fields"
+    );
+  }
+  if (!validator.isEmail(email)) {
+    throw new ProblemError(
+      400,
+      "invalid-email",
+      "Invalid email",
+      "Please provide a valid email"
+    );
+  }
+
+  if (!validator.isStrongPassword(body.password)) {
+    throw new ProblemError(
+      400,
+      "weak-password",
+      "Weak password",
+      "Please provide a stronger password"
+    );
+  }
+  return { email, ...body };
+};
+
+export const registerUser = async (req, res, next) => {
   try {
     const { body } = req;
-    const threeMonthsDate = 1000 * 60 * 60 * 24 * 90;
-    const { email } = body;
-    email.trim();
-    email.toLowerCase();
 
-    if (
-      validator.isEmpty(email) ||
-      validator.isEmpty(body.password) ||
-      validator.isEmpty(body.firstName) ||
-      validator.isEmpty(body.lastName)
-    ) {
-      throw new ProblemError(
-        400,
-        "empty-fields",
-        "Empty fields",
-        "Please fill all the fields"
-      );
-    }
-    if (!validator.isEmail(email)) {
-      throw new ProblemError(
-        400,
-        "invalid-email",
-        "Invalid email",
-        "Please provide a valid email"
-      );
-    }
+    const validateBody = validateRegisterBody(body);
 
-    if (!validator.isStrongPassword(body.password)) {
-      throw new ProblemError(
-        400,
-        "weak-password",
-        "Weak password",
-        "Please provide a stronger password"
-      );
-    }
+    const { email } = validateBody;
 
     const user = await User.findOne({ email });
+
     if (user) {
       throw new ProblemError(
         400,
@@ -145,32 +238,35 @@ export const postRegister = async (req, res, next) => {
       );
     }
 
-    const saltHash = generatePassword(body.password);
+    const saltHash = generatePassword(validateBody.password);
 
     const activationToken = new Date().valueOf();
+
     const newUser = new User({
-      firstName: body.firstName,
-      lastName: body.lastName,
-      middleName: body.middleName || null,
-      alias: body.alias || null,
+      firstName: validateBody.firstName,
+      lastName: validateBody.lastName,
+      middleName: validateBody.middleName || null,
+      alias: validateBody.alias || null,
       email,
       salt: saltHash.salt,
       hash: saltHash.hash,
-      phones: body.phone || [],
-      avatar: body.avatar || null,
+      phones: validateBody.phone || [],
+      avatar: validateBody.avatar || null,
       isActive: "pending",
       activationToken,
-      resetPasswordExpires: new Date(Date.now() + threeMonthsDate),
+      resetPasswordExpires: new Date(Date.now() + THREE_MONTHS),
     });
     const newCart = new Cart({
       userId: newUser._id,
       products: [],
       price: 0,
       discount: 0,
+      totalPrice: 0,
     });
-    await sendConfirmationEmail(body.firstName, email, activationToken);
+    await sendConfirmationEmail(validateBody.firstName, email, activationToken);
 
     const subscription = await Subscribe.findOne({ email });
+
     if (body.subscribe && !subscription) {
       const newSubscribe = new Subscribe({
         firstName: newUser.firstName,
@@ -193,6 +289,78 @@ export const postRegister = async (req, res, next) => {
         activationToken: newUser.activationToken,
         email: newUser.email,
         name: newUser.firstName,
+      },
+    });
+  } catch (error) {
+    next(error);
+  }
+};
+
+export const registerAdmin = async (req, res, next) => {
+  try {
+    const { body } = req;
+
+    const validateBody = validateRegisterBody(body);
+
+    const { email } = validateBody;
+
+    const admin = await Admin.findOne({ email });
+
+    if (admin) {
+      throw new ProblemError(
+        400,
+        "email-already-in-use",
+        "Email In Use",
+        "Email is already used"
+      );
+    }
+
+    const saltHash = generatePassword(validateBody.password);
+
+    const newAdmin = new Admin({
+      firstName: validateBody.firstName,
+      lastName: validateBody.lastName,
+      middleName: validateBody.middleName || null,
+      alias: validateBody.alias || null,
+      dateOfBirth: {
+        day: validateBody.dateOfBirth.day,
+        month: validateBody.dateOfBirth.month,
+        year: validateBody.dateOfBirth.year,
+      },
+      email,
+      salt: saltHash.salt,
+      hash: saltHash.hash,
+      phones: [
+        {
+          phone: validateBody.phones[0].phone,
+          type: validateBody.phones[0].type,
+        },
+      ],
+      role: validateBody.role,
+      avatar: validateBody.avatar || null,
+      isActive: validateBody.isActive || "active",
+      manager: validateBody.manager || null,
+      department: validateBody.department,
+      resetPasswordExpires: new Date(Date.now() + THREE_MONTHS),
+    });
+
+    const newCart = new Cart({
+      userId: newAdmin._id,
+      products: [],
+      price: 0,
+      discount: 0,
+      totalPrice: 0,
+    });
+
+    await newAdmin.save();
+    await newCart.save();
+
+    res.status(200).json({
+      title: "admin-account-created",
+      detail: "Account created successfully!",
+      userData: {
+        email: newAdmin.email,
+        name: newAdmin.firstName,
       },
     });
   } catch (error) {
