# server/swagger/spec.yaml
@@ -13,7 +13,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/LoginResponse"
+                $ref: "#/components/schemas/UserProfile"
           description: Success
         "400":
           content:
@@ -66,7 +66,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
           description: "Internal server error. Additional details will be contained on the server logs."
-      "requestBody":
+      requestBody:
         content:
           application/json:
             schema:
@@ -208,6 +208,78 @@ paths:
       description: Protected route only for logged users
       tags:
         - Testing
+  /auth/admin/register:
+    post:
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RegisterAdminResponse"
+          description: Success
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+          description: "Bad request. Some of the inputs provided to the request aren't valid"
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+          description: "Internal server error. Additional details will be contained on the server logs."
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RegisterAdminBody"
+        description: The request body for creating a new admin
+        required: true
+      operationId: adminRegister
+      summary: Register admin
+      description: Register a new admin in database
+      tags:
+        - Authentication
+  /auth/admin/login:
+    post:
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AdminProfile"
+          description: Success
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+          description: "Bad request. Some of the inputs provided to the request aren't valid"
+        "403":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+          description: User password have expired
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+          description: "Internal server error. Additional details will be contained on the server logs."
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginAdminBody"
+        description: The request body for logging in an admin.
+        required: true
+      operationId: adminAuthentication
+      summary: Login admin
+      description: Login admin using email and password
+      tags:
+        - Authentication
 
 components:
   schemas:
@@ -221,11 +293,6 @@ components:
       required:
         - email
         - password
-    LoginResponse:
-      type: object
-      properties:
-        userProfile:
-          $ref: "#/components/schemas/UserProfile"
     RegisterBody:
       properties:
         firstName:
@@ -278,7 +345,108 @@ components:
         success:
           type: boolean
         user:
-          $ref: "#/components/schemas/UserProfile"
+          oneOf:
+            - $ref: "#/components/schemas/AdminProfile"
+            - $ref: "#/components/schemas/UserProfile"
+    RegisterAdminBody:
+      properties:
+        firstName:
+          type: string
+        lastName:
+          type: string
+        middleName:
+          type: string
+        alias:
+          type: string
+        dateOfBirth:
+          type: object
+          properties:
+            day:
+              type: string
+              pattern: ^[0-9]{2}$|^$
+            month:
+              type: string
+              pattern: ^[0-2]{1}\d{1}|3[0-1]{1}|^$
+            year:
+              type: string
+              pattern: ^[0-9]{4}$|^$
+          required:
+            - day
+            - month
+            - year
+        email:
+          type: string
+          pattern: ^[\w-\.]+@([\w-]+\.)+[\w-]{2,6}$
+        phones:
+          type: array
+          items:
+            $ref: "#/components/schemas/PhoneObject"
+        role:
+          type: string
+          enum:
+            - support
+            - admin
+        avatar:
+          type: string
+        isActive:
+          type: string
+          enum:
+            - active
+            - pending
+            - blocked
+          default: active
+        manager:
+          type: string
+        department:
+          type: string
+          enum:
+            - sales
+            - office
+            - support
+            - hr
+            - it
+            - marketing
+            - management
+            - other
+      required:
+        - firstName
+        - lastName
+        - dateOfBirth
+        - email
+        - phones
+        - role
+        - department
+    RegisterAdminResponse:
+      properties:
+        title:
+          type: string
+        detail:
+          type: string
+        userData:
+          type: object
+          properties:
+            email:
+              type: string
+              pattern: ^[\w-\.]+@([\w-]+\.)+[\w-]{2,6}$
+            name:
+              type: string
+          required:
+            - email
+            - name
+      required:
+        - title
+        - detail
+        - userData
+    LoginAdminBody:
+      properties:
+        email:
+          type: string
+          pattern: ^[\w-\.]+@([\w-]+\.)+[\w-]{2,6}$
+        password:
+          type: string
+      required:
+        - email
+        - password
 
     UserAddress:
       properties:
@@ -328,6 +496,129 @@ components:
         - city
         - country
         - type
+
+    AdminProfile:
+      properties:
+        firstName:
+          type: string
+        lastName:
+          type: string
+        middleName:
+          type: string
+          nullable: true
+        alias:
+          type: string
+          nullable: true
+        dateOfBirth:
+          type: object
+          properties:
+            day:
+              type: string
+              pattern: ^[0-9]{2}$|^$
+            month:
+              type: string
+              pattern: ^[0-2]{1}\d{1}|3[0-1]{1}|^$
+            year:
+              type: string
+              pattern: ^[0-9]{4}$|^$
+          required:
+            - day
+            - month
+            - year
+        email:
+          type: string
+          pattern: ^[\w-\.]+@([\w-]+\.)+[\w-]{2,6}$
+        phones:
+          type: array
+          items:
+            type: object
+            properties:
+              phone:
+                type: string
+                maxLength: 30
+                minLength: 4
+                pattern: ^[0-9-+\s]{8,30}
+              type:
+                type: string
+                enum:
+                  - Home
+                  - Mobile
+                  - Work
+                default: Mobile
+            required:
+              - phone
+              - type
+        role:
+          type: string
+          enum:
+            - user
+            - support
+            - admin
+        avatar:
+          type: string
+          nullable: true
+        favourites:
+          type: array
+          nullable: true
+          items:
+            type: object
+            properties:
+              _id:
+                type: string
+        productCreated:
+          type: array
+          nullable: true
+          items:
+            type: object
+            properties:
+              _id:
+                type: string
+        savedAddress:
+          type: array
+          nullable: true
+          items:
+            type: object
+            properties:
+              _id:
+                type: string
+        isActive:
+          type: string
+          enum:
+            - pending
+            - active
+            - blocked
+          default: pending
+        manager:
+          type: string
+          nullable: true
+        department:
+          type: string
+          enum:
+            - sales
+            - office
+            - support
+            - hr
+            - it
+            - marketing
+            - management
+            - other
+        resetPasswordToken:
+          type: string
+          nullable: true
+        resetPasswordExpires:
+          type: string
+          format: date-time
+      required:
+        - firstName
+        - lastName
+        - dateOfBirth
+        - email
+        - phones
+        - role
+        - isActive
+        - manager
+        - department
+        - resetPasswordExpires
 
     Brand:
       properties:
@@ -794,68 +1085,30 @@ components:
           pattern: ^[\w-\.]+@([\w-]+\.)+[\w-]{2,6}$
         phones:
           type: array
-          nullable: true
           items:
-            type: object
-            properties:
-              phone:
-                type: string
-                maxLength: 30
-                minLength: 4
-                pattern: ^[0-9-+\s]{8,30}
-                nullable: true
-              type:
-                type: string
-                enum:
-                  - Home
-                  - Mobile
-                  - Work
-                default: Mobile
+            $ref: "#/components/schemas/PhoneObject"
         role:
           type: string
           enum:
             - user
-            - support
-            - admin
           default: user
         avatar:
           type: string
           nullable: true
         favourites:
           type: array
-          example: []
-          nullable: true
           items:
             type: object
             properties:
-              test:
-                type: string
-        productCreated:
-          type: array
-          example: []
-          nullable: true
-          items:
-            type: object
-            properties:
-              test:
+              _id:
                 type: string
         savedAddress:
           type: array
-          example: []
           nullable: true
           items:
             type: object
             properties:
-              test:
-                type: string
-        creditCards:
-          type: array
-          example: []
-          nullable: true
-          items:
-            type: object
-            properties:
-              test:
+              _id:
                 type: string
         isActive:
           type: string
@@ -983,15 +1236,15 @@ components:
       properties:
         day:
           type: string
-          pattern: ^\s[0-9]{2}$|^$
+          pattern: ^[0-9]{2}$|^$
           nullable: true
         month:
           type: string
-          pattern: ^\s[0-2]{1}\d{1}|3[0-1]{1}|^$
+          pattern: ^[0-2]{1}\d{1}|3[0-1]{1}|^$
           nullable: true
         year:
           type: string
-          pattern: ^\s[0-9]{4}$|^$
+          pattern: ^[0-9]{4}$|^$
           nullable: true
     Address:
       type: object
